[B]3.0.0 (20-Jul-2020)[/B]
- Reworked addon for Python 3
- Removed youtube setup function &amp; added private api keys
- Bumped dependencies' versions

[B]2.0.2 (19-Aug-2018)[/B]
- Tweaked icon method call

[B]2.0.1 (03-Aug-2018)[/B]
- Updated stream url for tilemousiki
- Minor code cosmetics

[B]2.0.0 (29-Jun-2017)[/B]
- Simplified Youtube setup function
- Re-organized main menu
- Utilizing tulip libraries

[B]1.1.1 (27-Apr-2017)[/B]
- New stream urls

[B]1.1.0 (06-Mar-2017)[/B]
- Removed greek voice 2
- Fixed guide
- Fixed compatibility with older versions of Kodi

[B]1.0.8 (06-Jan-2017)[/B]
- Fixed error in addon.xml

[B]1.0.7 (29-Dec-2016)[/B]
- Improved youtube setup function

[B]1.0.6.1 (20-Dec-2016)[/B]
- Minor fix for artwork dependency

[B]1.0.6 (19-Dec-2016)[/B]
- New Youtube API keys setup function
- Localized a lot of strings

[B]1.0.6 (08-Dec-2016)[/B]
- Update link for Tilemousiki 2 HD

[B]1.0.5 (29-Oct-2016)[/B]
- Removed requests dependency
- Several other insignificant changes

[B]1.0.4 (27-Sep-2016)[/B]
- Fixed typeerror in code

[B]1.0.3 (23-Sep-2016)[/B]
- New link Tilemousiki 2 HD

[B]1.0.2 (11-Sep-2016)[/B]
- Aligned some tv guide text to left

[B]1.0.1 (11-Sep-2016)[/B]
- Weekend TV guide shift to next "paragraph"

[B]1.0.0 (11-Sep-2016)[/B]
- Initial Version
- Featuring 5 main Live TV & 3 Live Radio Channels
- TV Guide parsed from the website