@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.greekvoice" name="Greek Voice" version="3.0.0" provider-name="Twilight0">
+<addon id="plugin.video.greekvoice" name="Greek Voice" version="3.0.1" provider-name="Twilight0">
     <requires>
-        <import addon="xbmc.python" version="2.24.0"/>
+        <import addon="xbmc.addon" version="16.1.000"/>
         <import addon="script.greekvoice.artwork" version="1.1.0"/>
         <import addon="plugin.video.youtube" version="6.8.2"/>
-        <import addon="script.module.tulip" version="2.6.5"/>
+        <import addon="script.module.tulip" version="2.8.1"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="addon.py">
         <provides>video</provides>
@@ -18,7 +18,10 @@
         <license>GPL-3.0-only</license>
         <website>http://wpso.com/</website>
         <email>angelo@greekvoice.us</email>
-        <news>[B]3.0.0 (20-Jul-2020)[/B]
+        <news>[B]3.0.1 (29-Nov-2020)[/B]
+- Updated youtube api keys
+
+[B]3.0.0 (20-Jul-2020)[/B]
 - Reworked addon for Python 3
 - Removed youtube setup function &amp; added private api keys
 - Bumped dependencies' versions
